# faronix

./: .conda  .gitignore  .venv  CHANGELOG  README.md  faronix_generator.py  faronix_validate.py  pyproject.toml  requirements.lock.txt  requirements.txt  test_generator.py
.Trash-1000/files/: .conda
.Trash-1000/info/: .conda-bootstrapped.trashinfo  .conda.trashinfo
.github/workflows/: test.yml
_bin/: Original_startup.py  cli.py  component_index.json  ctl_django.py  faronix_config.py  faronix_generate_full_config.py  faronix_startup.py  faronix_wizard.py  generate_component_index.py
_discarded/: default_view.json
_filecopy/_oldfiles/: retired_sidemenu.html
_filecopy/handler_urls/: urls.py  urls_autogen.py
builder/fstab/: .manifestrc  faronix_fstab.py
builder/nginx/: .manifestrc  faronix_nginx.py
builder/systemd/: .manifestrc  faronix_systemd.py
examples/manifest/: .conda  .venv  README.md  generate_pages.py  requirements.txt
faronix.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
generator/: faronix_manifestrc.py
json/: homepanel.json  homepanel_test.json  yofaron_scaffolded.jsonc  yofaron_scaffolded_2025-09-11_23-47-22.json
json/_discarded/: admin.json  books.json  minimal.json  yofaron_generator.py
json/django_json/: yofaron_scaffolded_2025-09-11_19-04-49.json
management/commands/: .yofaron.py.swp
scripts/: environmentloading.py  faronix_logger.py
snippets/htmls/: _admin_pages.html
sysconf/: fstab.conf
templates/partials/: homepanel_partial.html
tpl/: django.tpl  fstab.tpl
tpl/tpl_html/: component_index.json
(+125 files in other folders)
