[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "faronix"
version = "0.1.0"
description = "Faronix Python tools and utilities"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Faron", email = "faron@example.com" }]
license = {text = "MIT"}

dependencies = [
    "jinja2",
    "django-htmx"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black"
]

[project.scripts]
faronix = "faronix.cli:main"

[tool.setuptools.packages.find]
where = ["."]

